--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Sign In</h1>
-    <form action="">
-        <label for="userName">Username</label>
-        <input type="text" name="name" id="userName" placeholder="Enter Your Username">
+    <form action="/auth/signin" method="post">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" placeholder="Enter Your Email">
         <label for="password">Password</label>
         <input type="password" name="password" id="password">
         <button type="submit">Sign In</button>
