--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Sign Up</h1>
-    <form action="">
+    <form action="/auth/signup" method="POST">
         <label for="name">Name:</label>
         <input type="text" name="name" id="name" placeholder="Enter Your Name">
         <label for="email">Email:</label>
@@ -16,5 +16,7 @@
         <input type="password" name="password" id="password" placeholder="Enter Your Password">
         <button type="submit">Sign Up</button>
     </form>
+
+    <a href="/auth/signin">signin</a>
 </body>
 </html>
