created an alert box for user logging in success or error messages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Authentication</h1>
+    <a href="/auth/signup">SignUp</a>
+    <a href="/auth/signin">SignIn</a>
 </body>
 </html>
