updated signin and signup pages

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -122,7 +122,7 @@
         <form action="/auth/signin" method="post">
             <div class="box">
                 <label for="email">Email</label>
-                <input type="email" name="email" id="email" placeholder="Enter Your Email">
+                <input type="email" name="email" id="email" placeholder="Enter Your Email" autocomplete="off">
             </div>
             <div class="box">
 
